--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <title>20/10</title> <!-- Đặt tên hiển thị trên tab -->
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css" />
