--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>20/10 ღ</title>
+    <title>Ngày đặc biệt ღ</title>
     <!-- Required meta tags -->
+     
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -47,10 +48,10 @@
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Yêu ơi là yêuuuuuu <333
+          Qua môn
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Lấy chồng đại gia
         </button>
       </div>
     </div>
