--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <header>
           <h2 id="text3">Hôm nay là 20/10, tớ có điều muốn nói </h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+          Ngày hôm nay không bông hoa nào đẹp hơn các bạn đâu <3 Chúc các bạn nữ ngày hôm nay luôn tươi tắn, xinh đẹp và tràn đầy năng lượng, mong những điều tốt đẹp nhất sẽ đến với cậu💖!, Hãy chọn cho mình 1 điều ước nhé🐧
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
@@ -56,6 +56,7 @@
       </div>
     </div>
     <audio src="./sound/Heybabe.mp3" autoplay></audio>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
