thêm chức năng nhập tên người dùng, thêm font màu đỏ, thay đổi hàm main, sửa lại text

--- a/index.html
+++ b/index.html
@@ -1,80 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ngày đặc biệt ღ</title>
-    <!-- Required meta tags -->
-     
+    <title>Nhập tên của cậu :></title>
+
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>20/10</title> <!-- Đặt tên hiển thị trên tab -->
-
-
-    <!-- Bootstrap CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Your name</title> <!-- Đặt tên hiển thị trên tab -->
+    <!-- Liên kết tới tệp CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinload.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href=" https://fonts.googleapis.com/css?family=Pacifico"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      crossorigin="anonymous" />
   </head>
   <body>
-    <div class="wrapper">
-      <!-- Preloader -->
-      <div id="preloader">
-        <div class="spinner">
-          <div class="rect1"></div>
-          <div class="rect2"></div>
-          <div class="rect3"></div>
-          <div class="rect4"></div>
-          <div class="rect5"></div>
+    <!-- Hình nền -->
+    <div id="bg"></div>
+
+    <div class="container content">
+      <!-- Hộp thoại nhập tên -->
+      <div id="nameInputSection" class="input-group" style="margin-top: 100px;">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Tên của bạn</span>
+        </div>
+        <input type="text" id="txtName" placeholder="Nhập tên của bạn" class="form-control" />
+        <div class="input-group-append">
+          <button id="submitName" type="button" class="btn btn-primary">
+            Gửi tên
+          </button>
         </div>
       </div>
-      <div id="bg"></div>
-      <div class="content">
-        <header>
-          <h2 id="text3">Hôm nay là 20/10, tớ có điều muốn nói </h2>
-          <h4 id="text4">
-          Ngày hôm nay không bông hoa nào đẹp hơn các bạn đâu <3 Chúc các bạn nữ ngày hôm nay luôn tươi tắn, xinh đẹp và tràn đầy năng lượng, mong những điều tốt đẹp nhất sẽ đến với cậu💖!, Hãy chọn cho mình 1 điều ước nhé🐧
-          </h4>
-        </header>
-        <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Qua môn
-        </button>
-        <button id="no" type="button" class="btn btn-info btn-lg">
-          Lấy chồng đại gia
-        </button>
-      </div>
     </div>
+
     <audio src="./sound/CuteSong.mp3" autoplay></audio>
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.js"
-      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/myJs.js"></script>
+    <script>
+      $(document).ready(function () {
+        // Sự kiện khi người dùng nhấn nút gửi tên
+        $("#submitName").click(function () {
+          var userName = $("#txtName").val(); // Lấy tên người dùng nhập
+          if (userName.trim() !== "") {
+            // Chuyển hướng đến trang chào mừng với tên người dùng
+            window.location.href = "Welcome.html?name=" + encodeURIComponent(userName);
+          } else {
+            Swal.fire({
+              icon: "error",
+              title: "Oops...",
+              text: "Bạn phải nhập tên trước khi tiếp tục!",
+              customClass: {
+                title: 'error-title', // Lớp tùy chỉnh cho tiêu đề
+                content: 'error-content' // Lớp tùy chỉnh cho nội dung
+              }
+            });
+          }
+        });
+      });
+    </script>
   </body>
 </html>
