bổ sung thêm tên

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       "Hưng", "Khoa", "Long", "Mạnh", "Nhật", 
       "Phú", "Quốc", "Sơn", "Thắng", "Tùng", 
       "Vinh", "Vũ", "Điền", "Bảo", "Đạt", 
-      "Đức", "Hải", "Lâm", "Nguyên", "Phong", "Tín"
+      "Dương","Khánh",
+      "Đức", "Hải", "Lâm", "Nguyên", "Phong", "Tín", "Huy", "Tú", "Đại"
       ];
       //Danh sách tên lạ 50% từ minh tín
       var specialName2 = 
