--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
         //Danh sách tên lạ 50% từ minh tín
           var specialName2 = 
           [
-            "LmaoLmao", "nhờn", "Mẹ ông béo", "M ngu", "Surima","Mẹ m béo", 
+            "Lmaolmaolmao", "Nhờn", "Mẹ ông béo", "M ngu", "Surima","Mẹ m béo", 
             "Béo", "Sói cô độc", "Má ông ", "Hồng hài nhi", "Kim sí điểu", 
-            "Ngưu ma vương", "Báo", "Mẹ mày", "Thợ săn hồng hài nhi"
+            "Ngưu ma vương", "Báo", "Mẹ mày", "Thợ săn hồng hài nhi", "Cá chà bạch",
           ];
           var userName = $("#txtName").val(); // Lấy tên người dùng nhập
           if (userName !== "") 
