Chỉnh lại text, Thêm 1 số từ khóa đặc biệt, Thêm nguồn ý tưởng

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </style>
 
   <body>
-
+    <h6>Thiết kế riêng cho sinh viên Sư phạm :D</h6>
   </div>
 
   <img src="img/cute-dancing.gif" id="floatingGif" alt="GIF">
@@ -130,7 +130,7 @@
         </div>
 
       <div class="input-group mb-3">
-        <input type="text" id="txtInfor" placeholder="1+1 = ?" class="form-control" />
+        <input type="text" id="txtInfor" placeholder="Mssv" class="form-control" />
       </div>
 
         <!--Nút gửi-->
@@ -163,8 +163,8 @@
           "Tiến", "An", "Bình", "Cường", "Duy", 
           "Hưng", "Khoa", "Long", "Mạnh", "Nhật", 
           "Phú", "Quốc", "Sơn", "Thắng", "Tùng", 
-          "Vinh", "Vũ", "Điền", "Bảo", "Đạt", 
-          "Dương","Khánh", "Ấn",
+           "Vũ", "Điền", "Bảo", "Đạt", 
+          "Dương","Khánh", "Ấn", "Trường",
           "Đức", "Hải", "Lâm", "Nguyên", "Phong", "Tín", "Huy", "Tú", "Đại"
           ];
         //Danh sách tên lạ 50% từ minh tín
