thay đổi lại nền, sủa lại tên đặc biệt, ghi chú

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div id="bg2"></div>
       <!-- Hộp thoại nhập tên -->
       <div class="container content" id="nameInputSection">
-        <img src="img/38ffa4616c7e43522afa0d3569fb522b.gif" id ="gif1" alt="icon">
+        <img src="img/Info.gif" id ="gif1" alt="icon">
         <div class="input-group mb-3">
           <input type="text" id="txtName" placeholder="Tên của cậu" class="form-control" />
         </div>
@@ -158,16 +158,16 @@
         //Danh sách tên con trai tôi hay được nghe
           var specialNames = 
           [
-          "ITBoy", "Minh Tín", "Tỷ", "Kiệt", "Nam", 
+          "ITBoy", "Tỷ", "Kiệt", "Nam", 
           "Boy", "Quân", "Tuấn", "Hậu", 
           "Tiến", "An", "Bình", "Cường", "Duy", 
           "Hưng", "Khoa", "Long", "Mạnh", "Nhật", 
           "Phú", "Quốc", "Sơn", "Thắng", "Tùng", 
            "Vũ", "Điền", "Bảo", "Đạt", 
-          "Dương","Khánh", "Ấn", "Trường",
+          "Dương","Khánh", "Ấn", "Trường","Phát",
           "Đức", "Hải", "Lâm", "Nguyên", "Phong", "Tín", "Huy", "Tú", "Đại"
           ];
-        //Danh sách tên lạ 50% từ minh tín
+        //Danh sách tên lạ 90% từ minh tín
           var specialName2 = 
           [
             "Lmaolmaolmao", "Nhờn", "Mẹ ông béo", "M ngu", "Surima","Mẹ m béo", 
