sửa lại text, cập nhật lại toàn bộ nội dung, hình ảnh

--- a/Welcome.html
+++ b/Welcome.html
@@ -42,10 +42,8 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Hôm nay là 20/10, tớ có điều muốn nói </h2>
-          <h4 id="text4">
-          Ngày hôm nay không bông hoa nào đẹp hơn các bạn đâu <3 Chúc các bạn nữ ngày hôm nay luôn tươi tắn, xinh đẹp và tràn đầy năng lượng, mong những điều tốt đẹp nhất sẽ đến với cậu💖!, Hãy chọn cho mình 1 điều ước nhé🐧
-          </h4>
+          <h2 id="text3"></h2>
+          <h4 id = "text7"></h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
           Qua môn
