--- a/Welcome.html
+++ b/Welcome.html
@@ -43,10 +43,10 @@
       <div class="content">
         <header>
           <h2 id="text3"></h2>
-          <h4 id = "text7"></h4>
+          <h4 id ="text4"></h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Qua môn
+          Đạt điểm A mọi môn
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
           Lấy chồng đại gia
